# ListingApp-Python-

./: .env  pyproject.toml
dailydo_todo_app/: main.py  setting.py
src/dailydo_todo_app/: main.py
tests/: test_main.py
