[project]
name = "dailydo-todo-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Md Tasrif Khan",email = "tasrif.k.56@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "sqlmodel (>=0.0.38,<0.0.39)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
]

[tool.poetry]
packages = [{include = "dailydo_todo_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
